# RoboCup2017RVRL_Demo

./: README.md  setup.bash
models/: _check_used_model.bash
models/AEON_Yagoto/: model.config  model.sdf
models/Floor_large/: model.config  model.sdf
models/Floor_medium/: model.config  model.sdf
models/Floor_small/: model.config  model.sdf
models/Floor_verysmall/: model.config  model.sdf
models/airplane_1/: model.config  model.sdf
models/bed2/: bed3.mtl  model.config  model.sdf
models/car_2/: model.config  model.sdf
models/chair1/: model.config  model.sdf
models/circ_maze_1/: circ_maze2.stl  model.config  model.sdf
models/desk1/: model.config  model.sdf
models/desk3/: model.config  model.sdf
models/grass_1/: model.config  model.sdf
models/hex_maze/: model.config  model.sdf  new_maze4.stl
models/kitchen/: model.config  model.sdf
models/machines/: model.config  model.sdf
models/outdoor_plane/: model.config  model.sdf
models/outdoor_planesmall/: model.config  model.sdf
models/tree2/: Tree.mtl  model.config  model.sdf
models/tree3/: Palmera.mtl  model.config  model.sdf
models/tree_2m*2m/: model.config  model.sdf  needle01.mtl
models_robots_victims/: clone_all_robots
models_robots_victims/camera_ros/: model.sdf
src/p3at_description/: package.xml
src/p3at_description/launch/: empty_world_multi_robot_example.launch  lots_of_robots.launch  p3at.launch  sdf.launch
src/p3at_description/urdf/: camera_rc2016.urdf.xacro  generic_thermal_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  pioneer3at.urdf.xacro  pioneer3at_rc2016.urdf.xacro
(+241 files in other folders)
